--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,7 +12,7 @@
     "@rc-llm/components": "workspace:*"
   },
   "devDependencies": {
-    "dumi": "^2.2.0",
+    "dumi": "2.4.21",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "typescript": "^5.0.0"
