Add DraggableFloat component with drag-and-drop functionality and documentation
- Implemented DraggableFloat component allowing users to drag and drop within the viewport or a specified boundary.
- Added styles for the DraggableFloat component to enhance visual feedback during interactions.
- Created demo examples to showcase basic usage and boundary constraints.
- Updated component exports to include DraggableFloat.
- Added documentation for DraggableFloat with usage instructions and API details.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "React移动端UI组件库",
   "scripts": {
-    "dev": "bun run build:components && (cd packages/docs && bun run dev &)",
+    "dev": "bun run build:components && (cd packages/docs && bun run dev)",
     "build": "bun run build:components && bun run build:docs",
     "build:components": "(cd packages/components && bun run build)",
     "build:docs": "(cd packages/docs && bun run build)",
